src/MenuItem/MenuItem.css
.MenuItem {
    overflow: hidden;
    border-radius: 8px;
    cursor: pointer;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
    background-color: #f3dbea;
    display: flex;
    flex-direction: column;
    align-items: center;
    transition: all 0.3s ease-in-out;
}

.title {
    font-family: cursive;
    font-size: 2.3rem;
    margin-top: 12px;
    padding-bottom: 12px;
    color: #fff;
}

.MenuLink {
    position:relative;
    display: flex;
    text-decoration: none;
}

.MenuItemImage {
    width: 100%;
    object-fit: cover;
    transition: filter 0.3s ease-in-out, transform 0.3s ease-in-out;
    transform: scale(1.2);
}

.MenuItem:hover .MenuItemImage {
    transform: scale(1);
}

.TextOverlay {
    display: flex;
    flex-direction: column;
    justify-content: flex-end;
    padding: 12px;
    gap: 12px;
    opacity: 0;
    transition: opacity 0.3s ease-in-out;
}

.MenuLink:hover .TextOverlay {
    opacity: 1;
}

.TextOverlay p:not(.heading) {
    font-size: 1.6em;
}

.TextOverlay p:last-child {
    color: #6145e0;
    font-weight: 600;
}

.MenuContainer {
    position: relative;
    height: 77vh;
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    row-gap: 12px;
}

.menu-list {
    display: flex;
    gap: 7px;
    justify-content: center;
}

@media (max-width: 580px) {
    .menu-list {
      flex-wrap: wrap;
      justify-content: space-between;
    }
  
    .MenuItem {
        width: 40%;
        margin-bottom: 12px;
        background-color: red;
    }

    .MenuItemImage {
        height: 100%;
    }

    .title {
        font-size: 1.5rem;
    }

    .TextOverlay p:not(.heading) {
        font-size: 1.2em;
    }

    .TextOverlay p:last-child {
        font-size: 1.2em;
    }

    .MenuContainer {
        height: 100%;
    }
  }

